--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,10 +22,12 @@ jobs:
           command: |
             echo "$GCLOUD_SERVICE_KEY" | base64 --decode > gcp-key.json
             gcloud auth activate-service-account --key-file=gcp-key.json
-            gcloud auth configure-docker us-central1-docker.pkg.dev
-            docker build -t gcr.io/$GOOGLE_PROJECT_ID/mlops-app:latest .
-            docker push gcr.io/$GOOGLE_PROJECT_ID/mlops-app:latest           
-            
+            gcloud auth configure-docker us-central1-docker.pkg.dev || gcloud auth configure-docker
+      - run:
+          name: Build and Push Docker Image
+          command: |
+            docker build -t us-central1-docker.pkg.dev/$GOOGLE_PROJECT_ID/mlops-app/mlops-app:latest .
+            docker push us-central1-docker.pkg.dev/$GOOGLE_PROJECT_ID/mlops-app/mlops-app:latest
 
   deploy_to_gke:
     executor: docker-executor
@@ -39,11 +41,17 @@ jobs:
             echo "deb [signed-by=/usr/share/keyrings/cloud.google.gpg] https://packages.cloud.google.com/apt cloud-sdk main" | sudo tee -a /etc/apt/sources.list.d/google-cloud-sdk.list
             sudo apt-get update && sudo apt-get install -y google-cloud-sdk kubectl
       - run:
-          name: Deploy to GKE
+          name: Authenticate with Google Cloud
           command: |
             echo "$GCLOUD_SERVICE_KEY" | base64 --decode > gcp-key.json
             gcloud auth activate-service-account --key-file=gcp-key.json
+      - run:
+          name: Get Kubernetes Credentials
+          command: |
             gcloud container clusters get-credentials $GKE_CLUSTER --zone $GOOGLE_COMPUTE_ZONE --project $GOOGLE_PROJECT_ID
+      - run:
+          name: Deploy to GKE
+          command: |
             kubectl apply -f kubernetes-deployment.yaml
 
 workflows:
