--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,18 +35,12 @@ jobs:
       - checkout
       - setup_remote_docker
       - run:
-          name: Install Google Cloud SDK & kubectl
-          command: |
-            apt-get update && apt-get install -y apt-transport-https ca-certificates gnupg
-            echo "deb [signed-by=/usr/share/keyrings/cloud.google.gpg] https://packages.cloud.google.com/apt cloud-sdk main" | tee -a /etc/apt/sources.list.d/google-cloud-sdk.list
-            apt-get update && apt-get install -y google-cloud-sdk kubectl
-      - run:
           name: Authenticate with Google Cloud
           command: |
             echo "$GCLOUD_SERVICE_KEY" | base64 --decode > gcp-key.json
             gcloud auth activate-service-account --key-file=gcp-key.json
       - run:
-          name: Get Kubernetes Credentials
+          name: Configure GKE Credentials
           command: |
             gcloud container clusters get-credentials $GKE_CLUSTER --zone $GOOGLE_COMPUTE_ZONE --project $GOOGLE_PROJECT_ID
       - run:
